# tensorflow-custom-op

./: .gitignore  CMakeLists.txt  README.md  find_tf_path.py
cmake/modules/: FindTensorFlow.cmake
python/inner_product/: inner_product_ops.py  inner_product_ops_test.py
src/: CMakeLists.txt
src/01-tf-new-op/: CMakeLists.txt  use_op.py  zero_out_op.cc  zero_out_op.h  zero_out_op_test.py
src/02-tf-new-cuda-op/: CMakeLists.txt  example_op.cc  example_op.cc.bk  example_op.cu.cc  example_op.cu.cc.bk  example_op.h  example_op.h.bk
src/03-stackoverflow/: CMakeLists.txt  add_one_op.cu.cc
src/04-tf-custom-op-github/: CMakeLists.txt
src/04-tf-custom-op-github/python/: time_two_ops.py  time_two_ops_test.py
src/05-bilateral-slice/: CMakeLists.txt  bilateral_slice.cc  bilateral_slice.cu.cc
src/06_inner_product/kernels/: inner_product_ops.cc
src/06_inner_product/ops/: inner_product_ops.cc
src/bilateral_slice/cc/: CMakeLists.txt
src/bilateral_slice/cc/kernels/: bilateral_slice_kernels.cc  bilateral_slice_kernels_gpu.cu.cc
src/bilateral_slice/cc/ops/: bilateral_slice_ops.cc
src/bilateral_slice/python/: bilateral_slice_ops.py  bilateral_slice_ops_test.py
src/inner_product/cc/: CMakeLists.txt
src/inner_product/cc/kernels/: inner_product.h  inner_product_kernels.cc  inner_product_kernels_gpu.cu.cc
src/inner_product/cc/ops/: inner_product_ops.cc
src/inner_product/python/: inner_product_ops.py  inner_product_ops_test.py
src/time_two/cc/: CMakeLists.txt
src/time_two/cc/kernels/: time_two.h  (+2 more)
src/time_two/python/: time_two_ops.py  time_two_ops_test.py
(+1 files in other folders)
